src/tests/krate/publish/snapshots/all__krate__publish__basics__new_krate_twice.snap
---
source: src/tests/krate/publish/basics.rs
expression: response.into_json()
---
{
  "crate": {
    "badges": null,
    "categories": null,
    "created_at": "[datetime]",
    "description": "2.0.0 description",
    "documentation": null,
    "downloads": 0,
    "exact_match": false,
    "homepage": null,
    "id": "foo_twice",
    "keywords": null,
    "links": {
      "owner_team": "https://crates.io/api/v1/crates/foo_twice/owner_team",
      "owner_user": "https://crates.io/api/v1/crates/foo_twice/owner_user",
      "owners": "https://crates.io/api/v1/crates/foo_twice/owners",
      "reverse_dependencies": "https://crates.io/api/v1/crates/foo_twice/reverse_dependencies",
      "version_downloads": "https://crates.io/api/v1/crates/foo_twice/downloads",
      "versions": "https://crates.io/api/v1/crates/foo_twice/versions"
    },
    "max_stable_version": "2.0.0",
    "max_version": "2.0.0",
    "name": "foo_twice",
    "newest_version": "2.0.0",
    "recent_downloads": null,
    "repository": null,
    "updated_at": "[datetime]",
    "versions": null
  },
  "warnings": {
    "invalid_badges": [],
    "invalid_categories": [],
    "other": []
  }
}
