src/tests/krate/publish/snapshots/all__krate__publish__basics__new_krate_with_token.snap
---
source: src/tests/krate/publish/basics.rs
expression: response.into_json()
---
{
  "crate": {
    "badges": null,
    "categories": null,
    "created_at": "[datetime]",
    "description": "description",
    "documentation": null,
    "downloads": 0,
    "exact_match": false,
    "homepage": null,
    "id": "foo_new",
    "keywords": null,
    "links": {
      "owner_team": "https://crates.io/api/v1/crates/foo_new/owner_team",
      "owner_user": "https://crates.io/api/v1/crates/foo_new/owner_user",
      "owners": "https://crates.io/api/v1/crates/foo_new/owners",
      "reverse_dependencies": "https://crates.io/api/v1/crates/foo_new/reverse_dependencies",
      "version_downloads": "https://crates.io/api/v1/crates/foo_new/downloads",
      "versions": "https://crates.io/api/v1/crates/foo_new/versions"
    },
    "max_stable_version": "1.0.0",
    "max_version": "1.0.0",
    "name": "foo_new",
    "newest_version": "1.0.0",
    "recent_downloads": null,
    "repository": null,
    "updated_at": "[datetime]",
    "versions": null
  },
  "warnings": {
    "invalid_badges": [],
    "invalid_categories": [],
    "other": []
  }
}
